--- a/Esferisoft/pom.xml
+++ b/Esferisoft/pom.xml
@@ -7,11 +7,20 @@
     <groupId>org.example</groupId>
     <artifactId>Esferisoft</artifactId>
     <version>1.0-SNAPSHOT</version>
+    
+    <dependencies>
+        <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.12.1</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    
 </project>
