--- a/Esferisoft/config.json
+++ b/Esferisoft/config.json
@@ -1,27 +1,29 @@
 {
-  "branchName": "Super1",
-  "totalBoxes": 6,
-  "boxTypes": [
-    "preferencial",
-    "rapida",
-    "normal"
-  ],
-  "users": [
-    {
-      "username": "asev",
-      "password": "01200628"
-    },
-    {
-      "username": "mafeh",
-      "password": "02110"
-    },
-    {
-      "username": "ajev",
-      "password": "123456789"
-    },
-    {
-      "username": "dan",
-      "password": "456321"
+  "nombreSucursal": "Sucursal1",
+  "totalCajas": 3,
+  "tiposCajas": {
+    "cabeza": {
+      "dato": "rapida",
+      "siguiente": {
+        "dato": "preferencial",
+        "siguiente": {
+          "dato": "normal"
+        }
+      }
     }
-  ]
+  },
+  "usuarios": {
+    "cabeza": {
+      "dato": "asev:2028",
+      "siguiente": {
+        "dato": "mafe:0211",
+        "siguiente": {
+          "dato": "adb:1234",
+          "siguiente": {
+            "dato": "dan:6543"
+          }
+        }
+      }
+    }
+  }
 }
